# ice-finder

./: .env  .gitignore  README.md  env.yaml  environment-minimal.yml  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/hydra/: default.yaml
conf/nn/data/: default.yaml
conf/nn/data/dataset/segmentation/: default.yaml
conf/nn/module/: default.yaml
conf/train/: default.yaml
notebook/: workflow.ipynb
site/: 404.html  index.html
site/search/: search_index.json
src/cryo_et_ice_det/: _version.py  fine_tune_k_shots.py  run.py  run_inference_and_quantify.py
src/cryo_et_ice_det.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cryo_et_ice_det/data/: datamodule.py  dataset_inference.py
src/cryo_et_ice_det/pl_modules/: baseline.py
src/cryo_et_ice_det/tools/: coco_json_to_csv.py  plot_performance.py  preprocess_dir.py
src/cryo_et_ice_det/ui/: run.py
src/cryo_et_ice_det/utils/: analyze_quantifications.py  hf_io.py  io.py  split_data.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
